appId: app.kobuggi.hyuabot
name: Main navigation smoke
tags:
  - smoke
---
- launchApp:
    permissions:
      all: allow
- runFlow:
    when:
      visible: "Pixel Launcher isn't responding"
    commands:
      - tapOn: "Close app"
- runFlow:
    when:
      visible: "Skip"
    commands:
      - tapOn: "Skip"
- extendedWaitUntil:
    visible:
      id: "app.kobuggi.hyuabot:id/home_swipe_refresh_layout"
    timeout: 10000
- assertVisible:
    id: "app.kobuggi.hyuabot:id/home_swipe_refresh_layout"
- tapOn:
    id: "app.kobuggi.hyuabot:id/busRealtimeFragment"
- runFlow:
    when:
      visible: "Skip"
    commands:
      - tapOn: "Skip"
- assertVisible: "Sangnoksu"
- assertVisible: "Gangnam"
- tapOn:
    id: "app.kobuggi.hyuabot:id/subwayRealtimeFragment"
- runFlow:
    when:
      visible: "Skip"
    commands:
      - tapOn: "Skip"
- assertVisible: "Line 4"
- assertVisible: "Suin-Bundang Line"
- tapOn:
    id: "app.kobuggi.hyuabot:id/cafeteriaFragment"
- runFlow:
    when:
      visible: "Skip"
    commands:
      - tapOn: "Skip"
- assertVisible: "Breakfast"
- assertVisible: "Lunch"
- tapOn:
    id: "app.kobuggi.hyuabot:id/menuFragment"
- runFlow:
    when:
      visible: "Skip"
    commands:
      - tapOn: "Skip"
- assertVisible: "Reading Room"
- assertVisible: "Campus Map"
- assertVisible: "Campus Contacts"
- assertVisible: "Academic Calendar"
- assertVisible: "Settings"
