appId: app.kobuggi.hyuabot
name: Menu destinations smoke
tags:
  - smoke
---
- launchApp:
    permissions:
      all: allow
- runFlow:
    when:
      visible: "Pixel Launcher isn't responding"
    commands:
      - tapOn: "Close app"
- extendedWaitUntil:
    visible:
      id: "app.kobuggi.hyuabot:id/home_swipe_refresh_layout"
    timeout: 10000
- tapOn:
    id: "app.kobuggi.hyuabot:id/menuFragment"
- runFlow:
    when:
      visible: "Skip"
    commands:
      - tapOn: "Skip"
- tapOn: "Reading Room"
- runFlow:
    when:
      visible: "Skip"
    commands:
      - tapOn: "Skip"
- assertVisible: "Reading Room Extension Reminder"
- back
- tapOn:
    id: "app.kobuggi.hyuabot:id/menuFragment"
- tapOn: "Campus Map"
- runFlow:
    when:
      visible: "Skip"
    commands:
      - tapOn: "Skip"
- assertVisible: "Enter a room to search"
- back
- tapOn:
    id: "app.kobuggi.hyuabot:id/menuFragment"
- tapOn: "Campus Contacts"
- assertVisible: "Enter a contact to search"
- back
- tapOn:
    id: "app.kobuggi.hyuabot:id/menuFragment"
- tapOn: "Academic Calendar"
- assertVisible:
    id: "app.kobuggi.hyuabot:id/calendar_timeline_view"
- back
- tapOn:
    id: "app.kobuggi.hyuabot:id/menuFragment"
- tapOn: "Settings"
- runFlow:
    when:
      visible: "Skip"
    commands:
      - tapOn: "Skip"
- assertVisible:
    id: "app.kobuggi.hyuabot:id/setting_campus"
